--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
+<p> Hello</p>
 <main>
   <app-post-create (postCreated)="onPostAdded($event)"></app-post-create>
   <app-post-list [posts] ="enteredPosts"></app-post-list>
