--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -4,6 +4,11 @@
       {{ post.title }}
     </mat-expansion-panel-header>
       {{ post.content}}
+
+    <mat-action-row>
+      <button mat-button color="primary"> EDIT </button>
+      <button mat-button color="primary" (click)="onDelete(post.id)"> DELETE </button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p class= "mat-body-1" *ngIf="posts.length <=0"> No Posts</p>
