--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,14 +1,24 @@
 <mat-card>
-
+<form (submit)="onAddPost(postForm)" #postForm="ngForm">
   <mat-form-field>
-    <input matInput type="Text" [(ngModel)] = "enteredTitle">
+    <input matInput 
+           type="Text" 
+           name="title"
+           placeholder="Post Title *"
+           ngModel>
   </mat-form-field>
 
   <mat-form-field>
-    <textarea matInput rows=6 [(ngModel)] = "enteredContent"></textarea>
+    <textarea matInput 
+              rows=6
+              name = "content"
+              placeholder="Post Content*"
+              ngModel></textarea>
+
   </mat-form-field>
   <br>
-  <button mat-raised-button color = "primary" (click)="onAddPost()">Save Post</button>
+  <button mat-raised-button color = "primary" type = "submit">Save Post</button>
+</form>
 </mat-card>
 
 <!-- <p> {{ newPost }} </p> -->
