--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,17 @@
 mat-toolbar {
   margin-bottom: 1rem;
 }
+ul {
+  list-style:  none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration:  none;
+  color : white;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
