--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -6,7 +6,7 @@
       {{ post.content}}
 
     <mat-action-row>
-      <button mat-button color="primary"> EDIT </button>
+      <button mat-button color="primary" [routerLink]="['/edit', {'id' : post.id}]"> EDIT </button>
       <button mat-button color="primary" (click)="onDelete(post.id)"> DELETE </button>
     </mat-action-row>
   </mat-expansion-panel>
